basic Health and displaying of Health on screen

--- a/JimmyTimeSurvival.vcxproj
+++ b/JimmyTimeSurvival.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Framework\GameObject.cpp" />
     <ClCompile Include="Framework\SpriteObject.cpp" />
     <ClCompile Include="Framework\TextObject.cpp" />
+    <ClCompile Include="Health.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MovingObject.cpp" />
@@ -146,6 +147,7 @@
     <ClInclude Include="Framework\GameObject.h" />
     <ClInclude Include="Framework\SpriteObject.h" />
     <ClInclude Include="Framework\TextObject.h" />
+    <ClInclude Include="Health.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="MovingObject.h" />
     <ClInclude Include="Obstacle.h" />
