--- a/JimmyTimeSurvival.vcxproj.filters
+++ b/JimmyTimeSurvival.vcxproj.filters
@@ -78,6 +78,12 @@
     <ClCompile Include="Toolbox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Shooter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Animation.h">
