--- a/JimmyTimeSurvival.vcxproj.filters
+++ b/JimmyTimeSurvival.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="Enemy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Rusher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Animation.h">
@@ -144,6 +147,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Enemy.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Rusher.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
