--- a/JimmyTimeSurvival.vcxproj.filters
+++ b/JimmyTimeSurvival.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="Rusher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Alarmer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Animation.h">
@@ -150,6 +153,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Rusher.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Alarmer.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
