--- a/JimmyTimeSurvival.vcxproj.filters
+++ b/JimmyTimeSurvival.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="Alarmer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bullet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Animation.h">
@@ -156,6 +159,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Alarmer.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bullet.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
