created Door and some basic messing around for dealing with keys

--- a/JimmyTimeSurvival.vcxproj.filters
+++ b/JimmyTimeSurvival.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="ExitLvl2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Door.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Animation.h">
@@ -174,6 +177,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="ExitLvl2.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Door.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
