--- a/JimmyTimeSurvival.vcxproj
+++ b/JimmyTimeSurvival.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="Alarmer.cpp" />
     <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="Door.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Exit.cpp" />
     <ClCompile Include="ExitLvl2.cpp" />
@@ -161,6 +162,7 @@
   <ItemGroup>
     <ClInclude Include="Alarmer.h" />
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Door.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Exit.h" />
     <ClInclude Include="ExitLvl2.h" />
