--- a/JimmyTimeSurvival.vcxproj
+++ b/JimmyTimeSurvival.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Key.cpp" />
     <ClCompile Include="KeyText.cpp" />
     <ClCompile Include="Level.cpp" />
+    <ClCompile Include="Lives.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MovingObject.cpp" />
     <ClCompile Include="Obstacle.cpp" />
@@ -181,6 +182,7 @@
     <ClInclude Include="Key.h" />
     <ClInclude Include="KeyText.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="Lives.h" />
     <ClInclude Include="MovingObject.h" />
     <ClInclude Include="Obstacle.h" />
     <ClInclude Include="Pickup.h" />
