--- a/JimmyTimeSurvival.vcxproj.filters
+++ b/JimmyTimeSurvival.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="Lives.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ClockAnimation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Animation.h">
@@ -198,6 +201,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Lives.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ClockAnimation.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
