--- a/JimmyTimeSurvival.vcxproj
+++ b/JimmyTimeSurvival.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="Shooter.cpp" />
     <ClCompile Include="Spikes.cpp" />
     <ClCompile Include="Toolbox.cpp" />
+    <ClCompile Include="Tutorial.cpp" />
     <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -193,6 +194,7 @@
     <ClInclude Include="Shooter.h" />
     <ClInclude Include="Spikes.h" />
     <ClInclude Include="Toolbox.h" />
+    <ClInclude Include="Tutorial.h" />
     <ClInclude Include="Wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
