--- a/JimmyTimeSurvival.vcxproj.filters
+++ b/JimmyTimeSurvival.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="Tutorial2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Background.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Animation.h">
@@ -210,6 +213,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Tutorial2.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Background.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
